--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,13 +4,49 @@
     box-sizing: border-box;
 }
 
-body {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+h2 {
+    color: rgb(241, 241, 241);
+    position: absolute;
+    top: 20px;
+    left: 30px;
+}
 
-    font-family: sans-serif;
+
+
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #0a4740;
+    overflow: hidden;
+    Position: absolute;
+    top: 65px;
+    left: 0px;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 162px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #2b9e83;
+    color: #f2f2f2;
+  }
+  
+  /* Add a color to the active/current link */
+  .topnav a.active {
+    background-color: #2b9e83;
+    color: white;
+  }
+
+body {
+    font-family: georgia;
+    
     background-color: black;
     background-color: #111111;
     background-image: 
@@ -18,11 +54,20 @@ body {
 }
 
 /* Book */
+
+.book, .paper, .prev-btn, .next-btn {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .book {
     position: relative;
     width: 700px;
     height: 700px;
     transition: transform 0.5s;
+    filter: drop-shadow(0px 10px 5px rgba(0,0,0,0.25));
 }
 
 .paper {
@@ -32,7 +77,7 @@ body {
     top: 0;
     left: 0;
     perspective: 1500px;
-
+    perspective-origin: center 50px;
 }
 
 .front,
@@ -44,7 +89,7 @@ body {
     top: 0;
     left: 0;
     transform-origin: left;
-    transition: transform 0.5s;
+    transition: transform 1s;
 }
 
 .front {
@@ -83,6 +128,13 @@ button {
     cursor: pointer;
     margin: 10px;
     transition: transform 0.5s;
+}
+
+.prev-btn {
+    position: relative;
+    position: left;
+    justify-content: center;
+    align-items: center;
 }
 
 button:focus {
