--- a/styles/styles.css
+++ b/styles/styles.css
@@ -45,6 +45,10 @@ h2 {
   }
 
 body {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-family: georgia;
     
     background-color: black;
@@ -64,8 +68,11 @@ body {
 
 .book {
     position: relative;
-    width: 700px;
-    height: 700px;
+    top: 100px;
+    justify-content: center;
+    align-items: center;
+    width: 690px;
+    height: 500px;
     transition: transform 0.5s;
     filter: drop-shadow(0px 10px 5px rgba(0,0,0,0.25));
 }
@@ -126,6 +133,8 @@ button {
     border: none;
     background-color: transparent;
     cursor: pointer;
+    position: relative;
+    top: 110px;
     margin: 10px;
     transition: transform 0.5s;
 }
